# CodeKnowledgeTester

./: README.md
backend/: pyproject.toml  requirements.txt  server.py
backend/src/: ai_generator.py  app.py  default_return.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx  auth.module.css
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx  challenge.module.css
frontend/src/history/: HistoryPanel.jsx  history.module.css
frontend/src/layout/: Layout.jsx  layout.module.css
frontend/src/utils/: api.js
